2015-10-28  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-10-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/68102
	* config/aarch64/aarch64.md (*movsi_aarch64): Check that
	operands[0] is a reg before taking its REGNO in split condition.
	(*movdi_aarch64): Likewise.

2015-10-27  Caroline Tice  <cmtice@google.com.

	(from Richard Biener)
	* tree.c (int_cst_hasher::hash):  Replace XOR with more efficient
	call to interative_hash_host_wide_int.

2015-10-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-10-26  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR middle-end/67989
	* optabs.c (expand_atomic_compare_and_swap): Handle case when
	ptarget_oval or ptarget_bool are const0_rtx.

2015-10-27  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR target/67929
	* config/arm/arm.c (vfp3_const_double_for_bits): Rewrite.
	* config/arm/constraints.md (Dp): Update callsite.
	* config/arm/predicates.md (const_double_vcvt_power_of_two): Likewise.

2015-10-27  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (replace_removed_params_ssa_names): Change type of
	parameter stmt to gimple.

2015-10-26  Martin Jambor  <mjambor@suse.cz>

	Backport from mainline
	2015-10-09  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/67794
	* tree-sra.c (replace_removed_params_ssa_names): Do not distinguish
	between types of statements but accept original definitions as a
	parameter.
	(ipa_sra_modify_function_body): Use FOR_EACH_SSA_DEF_OPERAND to
	iterate over definitions.

2015-10-25  John David Anglin  <danglin@gcc.gnu.org>

	PR middle-end/68079
	* dojump.c (do_compare_and_jump): Canonicalize both function and
	method types.

2015-10-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	Backport from mainline
	2015-10-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR target/68015
	* config/s390/s390.md (mov<mode>cc): Emit compare only if we don't
	already have a comparison result.

2015-10-22  Uros Bizjak  <ubizjak@gmail.com>
